# AlwaysNote

./: .gitignore  AlwaysNote.sln  Cargo.toml  NSIS.nsi  README.md  build.rs
AlwaysNote/: AlwaysNote.c  AlwaysNote.cpp  AlwaysNote.csproj  AlwaysNote.rc  AlwaysNote.vcxproj  AlwaysNote.vcxproj.filters  App.xaml.cs  ConfirmDialog.xaml.cs  InfoDialog.xaml  NoteBox.xaml.cs  NoteStore.cs  NoteWindow.xaml  NoteWindow.xaml.cs  Resource.Designer.cs  Resource.resx  TextDialog.xaml
AlwaysNoteNotepad/: AlwaysNoteNotepad.csproj  App.xaml  App.xaml.cs  InfoDialog.xaml.cs  NoteBox.xaml  NoteBox.xaml.cs  NoteStore.cs  NoteWindow.xaml.cs  TextDialog.xaml.cs
src/: AlwaysNote.csproj  App.xaml.cs  ConfirmDialog.xaml  ExistingWindow.cs  Hotkey.cs  NoteBox.xaml  NoteStore.cs  NoteWindow.xaml  NoteWindow.xaml.cs  NotifyIcon.cs  Resources.Designer.cs  Resources.resx  Style.xaml  TextDialog.xaml.cs  color_palette.rs  find_replace.rs  hotkey.rs  main.rs  main_input.rs  note_model.rs  note_store.rs  notepad.rs  skip_taskbar.rs  store_adapter.rs  tray_icon.rs  win_manipulator.rs
src/Properties/: launchSettings.json
ui/: borderless_window.slint  color_palette.slint  delete_prompt.slint  editor_text_input.slint  find_replace.slint  inline_button.slint  inline_input.slint  main_input.slint  main_window.slint  model_adapter.slint  name_prompt.slint  option_popup.slint  prompt.slint
