[package]
name = "always_note"
version = "2.0.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.12"
dirs = "5.0.1"
i-slint-backend-winit = "1.4.1"
i-slint-core = "1.8.0"
slint = { version = "1.4.1", default-features = false, features = [ "accessibility", "backend-winit", "compat-1-2", "std", "renderer-femtovg" ] }
trayicon = { version = "0.2.0" }
windows = { version = "0.58.0", "features" = [ "Foundation", "UI_ViewManagement" ] }
windows-hotkeys = "0.2.1"

[build-dependencies]
slint-build = "1.4.1"
windres = "0.2.2"
