[package]
name = "always_note"
version = "2.0.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.12"
dirs = "5.0.1"
i-slint-core = { version = "1.9.0", git = "https://github.com/slint-ui/slint.git" }
slint = { version = "1.9.0", git = "https://github.com/slint-ui/slint.git", default-features = false, features = [ "accessibility", "backend-qt", "compat-1-2", "std" ] }
trayicon = { version = "0.2.0" }
windows = { version = "0.58.0", "features" = [ "Foundation", "UI_ViewManagement" ] }
windows-hotkeys = "0.2.1"

[build-dependencies]
slint-build = { version = "1.9.0", git = "https://github.com/slint-ui/slint.git" }
windres = "0.2.2"
